--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,46 @@
 # define DataSrouce properties
 # use h2 can have a buid in web console http://localhost:8080/h2-console
 spring:
+  application:
+    name: api
+  main:
+    allow-bean-definition-overriding: true
+  jackson:
+    default-property-inclusion: NON_EMPTY
+    date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
+    deserialization:
+      fail-on-unknown-properties: false
   datasource:
-    url: jdbc:h2:mem:mydb
-
+    url: jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    hikari:
+      transaction-isolation: TRANSACTION_READ_COMMITTED
+      connection-test-query: SELECT 1 FROM DUAL
+      minimum-idle: 1
+      maximum-pool-size: 10
+      idle-timeout: 10000
+      auto-commit: false
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+      use-new-id-generator-mappings: true
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+        default-schema: DBTABUNIFICADA
+  data:
+    jpa:
+      repositories:
+        enabled: true
+  h2:
+    console:
+      enabled: true #Enable the console.
+      path: /h2-console #Path at which the console will be available.
 jwt:
   secret: SECRET
