improving application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,5 +42,30 @@ spring:
     console:
       enabled: true #Enable the console.
       path: /h2-console #Path at which the console will be available.
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
+#Propriedades Documentação
+app-documentation:
+  version: @project.version@
+  api-title: API Rest
+  description: @project.description@
+
+#Habilitar o actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+#Logging
+logging:
+  level:
+    org.springframework.security: ERROR
+    org.hibernate: INFO
+
 jwt:
   secret: SECRET
