--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
     deserialization:
       fail-on-unknown-properties: false
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
+    time-zone: BRT
+
   datasource:
     url: jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
@@ -21,6 +25,7 @@ spring:
       maximum-pool-size: 10
       idle-timeout: 10000
       auto-commit: false
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -34,6 +39,7 @@ spring:
         format_sql: true
         use_sql_comments: true
         default-schema: DBTABUNIFICADA
+
   data:
     jpa:
       repositories:
@@ -42,6 +48,7 @@ spring:
     console:
       enabled: true #Enable the console.
       path: /h2-console #Path at which the console will be available.
+
   http:
     encoding:
       charset: UTF-8
@@ -67,5 +74,7 @@ logging:
     org.springframework.security: ERROR
     org.hibernate: INFO
 
-jwt:
-  secret: SECRET
+app:
+  jwt:
+    secret: SECRET
+    expiration-in-ms: 360000
