--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,12 +12,13 @@ spring:
       fail-on-unknown-properties: false
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
-    time-zone: BRT
+    time-zone: America/Sao_Paulo
 
   datasource:
-    url: jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
+    data: classpath:data.sql
     hikari:
       transaction-isolation: TRANSACTION_READ_COMMITTED
       connection-test-query: SELECT 1 FROM DUAL
@@ -38,7 +39,7 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-        default-schema: DBTABUNIFICADA
+        default-schema: DBPORTIFOLIO
 
   data:
     jpa:
@@ -57,9 +58,9 @@ spring:
 
 #Propriedades Documentação
 app-documentation:
-  version: @project.version@
+  version: '@project.version@'
   api-title: API Rest
-  description: @project.description@
+  description: '@project.description@'
 
 #Habilitar o actuator
 management:
