Improving JWT. Adding new attributes into Claims.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
     url: jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
+      initialize: true
     data: classpath:data.sql
     hikari:
       transaction-isolation: TRANSACTION_READ_COMMITTED
