--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     allow-bean-definition-overriding: true
   jackson:
     default-property-inclusion: NON_EMPTY
-    date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
+ #   date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
     deserialization:
       fail-on-unknown-properties: false
     serialization:
