spring-boot-starter-mail dependency

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<swagger.version>2.9.2</swagger.version>
 		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>
         <okhttp.version>3.14.2</okhttp.version>
+        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -39,6 +40,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.okta.spring</groupId>
@@ -180,68 +185,80 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			    <configuration>
+			        <classifier>exec</classifier>
+			    </configuration>
+			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                </configuration>
+            </plugin>			
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>${jacoco-maven-plugin.version}</version>
+			    <configuration>
+				<excludes>
+				    <exclude>br/com/ffroliva/portfolio/model/*</exclude>
+				    <exclude>br/com/ffroliva/portfolio/*Application</exclude>
+				</excludes>
+			    </configuration>
+			    <executions>
+				<execution>
+				    <id>default-prepare-agent</id>
+				    <goals>
+					<goal>prepare-agent</goal>
+				    </goals>
+				</execution>
+				<execution>
+				    <id>default-prepare-agent-integration</id>
+				    <goals>
+					<goal>prepare-agent-integration</goal>
+				    </goals>
+				</execution>
+				<execution>
+				    <id>default-report</id>
+				    <phase>verify</phase>
+				    <goals>
+					<goal>report</goal>
+				    </goals>
+				</execution>
+				<execution>
+				    <id>default-report-integration</id>
+				    <goals>
+					<goal>report-integration</goal>
+				    </goals>
+				</execution>
+				<execution>
+				    <id>default-check</id>
+				    <goals>
+					<goal>check</goal>
+				    </goals>
+				    <configuration>
+					<rules>
+					    <!-- implementation is needed only for Maven 2 -->
+					    <rule implementation="org.jacoco.maven.RuleConfiguration">
+						<element>BUNDLE</element>
+						<limits>
+						    <!-- implementation is needed only for Maven 2 -->
+						    <limit implementation="org.jacoco.report.check.Limit">
+							<counter>COMPLEXITY</counter>
+							<value>COVEREDRATIO</value>
+							<minimum>0.60</minimum>
+						    </limit>
+						</limits>
+					    </rule>
+					</rules>
+				    </configuration>
+				</execution>
+			    </executions>
 			</plugin>
 		</plugins>
-		<plugin>
-		    <groupId>org.jacoco</groupId>
-		    <artifactId>jacoco-maven-plugin</artifactId>
-		    <version>0.7.9</version>
-		    <configuration>
-			<excludes>
-			    <exclude>br/com/ffroliva/portfolio/model/*</exclude>
-			    <exclude>br/com/ffroliva/portfolio/*Application</exclude>
-			</excludes>
-		    </configuration>
-		    <executions>
-			<execution>
-			    <id>default-prepare-agent</id>
-			    <goals>
-				<goal>prepare-agent</goal>
-			    </goals>
-			</execution>
-			<execution>
-			    <id>default-prepare-agent-integration</id>
-			    <goals>
-				<goal>prepare-agent-integration</goal>
-			    </goals>
-			</execution>
-			<execution>
-			    <id>default-report</id>
-			    <phase>verify</phase>
-			    <goals>
-				<goal>report</goal>
-			    </goals>
-			</execution>
-			<execution>
-			    <id>default-report-integration</id>
-			    <goals>
-				<goal>report-integration</goal>
-			    </goals>
-			</execution>
-			<execution>
-			    <id>default-check</id>
-			    <goals>
-				<goal>check</goal>
-			    </goals>
-			    <configuration>
-				<rules>
-				    <!-- implementation is needed only for Maven 2 -->
-				    <rule implementation="org.jacoco.maven.RuleConfiguration">
-					<element>BUNDLE</element>
-					<limits>
-					    <!-- implementation is needed only for Maven 2 -->
-					    <limit implementation="org.jacoco.report.check.Limit">
-						<counter>COMPLEXITY</counter>
-						<value>COVEREDRATIO</value>
-						<minimum>0.60</minimum>
-					    </limit>
-					</limits>
-				    </rule>
-				</rules>
-			    </configuration>
-			</execution>
-		    </executions>
-		</plugin>
 	</build>
 
 	<repositories>
