--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,7 +75,7 @@ management:
 logging:
   level:
     org.springframework.security: ERROR
-    org.hibernate: INFO
+    org.hibernate: DEBUG
 
 app:
   jwt:
