--- a/pom.xml
+++ b/pom.xml
@@ -128,15 +128,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- REST ASSURED BEGIN-->
-		<dependency>
-			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured</artifactId>
-			<version>${io.rest-assured.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- REST ASSURED END -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-commons</artifactId>
@@ -150,6 +141,30 @@
 			<version>${org.junit.platform.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- REST ASSURED BEGIN -->
+		<dependency>
+		    <groupId>io.rest-assured</groupId>
+		    <artifactId>rest-assured</artifactId>
+		    <version>${io.rest-assured.version}</version>
+		    <scope>test</scope>
+		</dependency>
+
+		<dependency>
+		      <groupId>io.rest-assured</groupId>
+		      <artifactId>spring-mock-mvc</artifactId>
+		      <version>${io.rest-assured.version}</version>
+		      <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+	      <groupId>io.rest-assured</groupId>
+	      <artifactId>spring-web-test-client</artifactId>
+	      <version>${io.rest-assured.version}</version>
+	      <scope>test</scope>
+		</dependency>
+
+		<!-- REST ASSURED END -->
 
 		<!-- JWT -->
 		<dependency>
