--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,14 @@
 	<build>
 		<plugins>
 			<plugin>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+			        <compilerArguments>
+			            <processor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</processor>
+			        </compilerArguments>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			    <configuration>
