--- a/travis.yml
+++ b/travis.yml
@@ -1,5 +1,6 @@
 language: java
-jdk: oraclejdk8
-
 script:
-- ./mvnw clean install
+  - mvn test
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+jdk:
+  - oraclejdk8
