--- a/travis.yml
+++ b/travis.yml
@@ -1,1 +1,21 @@
+sudo: false
 language: java
+
+jdk:
+  - oraclejdk8
+
+install:
+  - mvn -B install -U
+
+after_success:
+  - util/deploy_snapshot.sh
+  - util/deploy_docs.sh
+
+branches:
+  only:
+    - master
+
+cache:
+  directories:
+    - $HOME/.m2
+
