--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,7 @@ spring:
         use_sql_comments: true
         user_sql_commments: true
         default-schema: DBPORTIFOLIO
+        ddl-auto: update
 
   data:
     jpa:
