--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -41,7 +41,7 @@ spring:
         use_sql_comments: true
         user_sql_commments: true
         default-schema: DBPORTIFOLIO
-        ddl-auto=update: update
+        ddl-auto: update
 
   data:
     jpa:
