--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -58,6 +58,23 @@ spring:
       enabled: true
       force: true
 
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+  servlet:
+    multipart:
+      enabled: true
+# Threshold after which files are written to disk.
+      file-size-threshold: 2KB
+# Max file size.
+      max-file-size: 200MB
+# Max Request Size
+      max-request-size: 215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file:
+  upload-dir: /ffroliva/portfolio/uploads
+
 #Propriedades Documentação
 app-documentation:
   version: '@project.version@'
